--- a/hw/kdrive/sdl/Makefile.in
+++ b/hw/kdrive/sdl/Makefile.in
@@ -394,7 +394,9 @@ INCLUDES = \
 Xsdl_SOURCES = sdl.c
 Xsdl_LDADD = \
 	@KDRIVE_LIBS@                                  \
-	@XSDL_LIBS@
+	@XSDL_LIBS@                                    \
+	-lGLESv2                                       \
+	-Wl,-rpath=/usr/local/lib
 
 Xsdl_DEPENDENCIES = @KDRIVE_LOCAL_LIBS@
 Xsdl_LDFLAGS = $(LD_EXPORT_SYMBOLS_FLAG)
