add pdl library to ldflags

--- a/hw/kdrive/sdl/Makefile.in
+++ b/hw/kdrive/sdl/Makefile.in
@@ -395,7 +395,7 @@ Xsdl_SOURCES = sdl.c
 Xsdl_LDADD = \
 	@KDRIVE_LIBS@                                  \
 	@XSDL_LIBS@                                    \
-	-lGLESv2                                       \
+	-lGLESv2 -lpdl                                 \
 	-Wl,-rpath=/usr/local/lib
 
 Xsdl_DEPENDENCIES = @KDRIVE_LOCAL_LIBS@
